k8s/study/ingress-web/cert/ingress-tomcat-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - tomcat.g6p.cn
    secretName: tomcat-ingress-secret
  rules:
  - host: tomcat.g6p.cn
    http:
      paths:
      - path:
        backend:
          serviceName: tomcat
          servicePort: 8080
